--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.5.9"
+    "@prisma/client": "^5.19.0",
+    "hono": "^4.5.9",
+    "prisma": "^5.19.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
