--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@prisma/extension-accelerate": "^1.1.0",
     "hono": "^4.5.9",
     "prisma": "^5.19.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/node": "^22.5.1",
     "wrangler": "^2.21.1"
   }
 }
