--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "WeWrite",
+  "name": "wewrite",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler publish --minify src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "argon2-browser": "^1.18.0",
     "hono": "^4.5.9",
     "prisma": "^5.19.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@types/argon2-browser": "^1.18.4",
     "@types/node": "^22.5.1",
     "wrangler": "^2.21.1"
   }
