--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "bcryptjs": "^2.4.3",
     "hono": "^4.5.9",
     "prisma": "^5.19.0",
     "uuid": "^10.0.0",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@types/argon2-browser": "^1.18.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.5.1",
     "wrangler": "^2.21.1"
   }
